--- a/public/summary.html
+++ b/public/summary.html
@@ -54,6 +54,11 @@
                     <canvas id="time-chart"></canvas>
                 </div>
 
+                <!-- 全プロジェクト収支サマリーセクション -->
+                <div id="global-revenue-summary" class="p-6 sm:p-8 space-y-6 bg-white rounded-2xl shadow-lg mb-6 hidden">
+                    <!-- JavaScriptで内容が動的に挿入されます -->
+                </div>
+
                 <!-- タブとコンテンツのコンテナ -->
                 <div id="summary-tabs-container" class="space-y-4">
                     <div role="tablist" id="project-tab-list" class="flex flex-wrap border-b border-gray-200 -mb-px">
@@ -139,6 +144,9 @@
         const chartContainer = document.getElementById('chart-container'); // グラフコンテナ
         const timeChartCanvas = document.getElementById('time-chart'); // Chart.jsのキャンバス
 
+        // 全プロジェクト収支サマリーセクション
+        const globalRevenueSummaryContainer = document.getElementById('global-revenue-summary');
+
         // 編集モーダル関連要素
         const editTimestampModal = document.getElementById('edit-timestamp-modal');
         const editTimestampForm = document.getElementById('edit-timestamp-form');
@@ -210,8 +218,13 @@
                 });
                 updateProjectSelectDropdowns(); // プロジェクト選択ドロップダウンを更新
                 // プロジェクトリストが更新されたら、サマリーを再描画する
+                const selectedDateForTable = new Date(summaryMonthInput.value + '-01T00:00:00');
                 renderSummary(loadedTimestamps.filter(ts => {
-                    const selectedDateForTable = new Date(summaryMonthInput.value + '-01T00:00:00');
+                    const tsDate = ts.clockInTime.toDate();
+                    return tsDate.getFullYear() === selectedDateForTable.getFullYear() && tsDate.getMonth() === selectedDateForTable.getMonth();
+                }));
+                // グローバルサマリーも再描画
+                renderGlobalRevenueSummary(loadedTimestamps.filter(ts => {
                     const tsDate = ts.clockInTime.toDate();
                     return tsDate.getFullYear() === selectedDateForTable.getFullYear() && tsDate.getMonth() === selectedDateForTable.getMonth();
                 }));
@@ -252,6 +265,7 @@
             showStatus("サマリーを読み込み中...", false, 'summary-status');
             projectTabList.innerHTML = ''; // タブをクリア
             projectTabContent.innerHTML = '<p class="text-gray-500 text-center py-4">読み込み中...</p>'; // コンテンツをクリア
+            globalRevenueSummaryContainer.innerHTML = '<p class="text-gray-500 text-center py-4">読み込み中...</p>'; // グローバルサマリーコンテンツをクリア
 
             try {
                 const selectedDateForTable = new Date(selectedMonth + '-01T00:00:00');
@@ -291,6 +305,7 @@
                         return tsDate.getFullYear() === selectedDateForTable.getFullYear() && tsDate.getMonth() === selectedDateForTable.getMonth();
                     });
                     renderSummary(currentMonthTimestamps); // テーブル表示は選択された月のみ
+                    renderGlobalRevenueSummary(currentMonthTimestamps); // グローバルサマリーも選択された月のみ
                     updateChart(loadedTimestamps, startDate, endDate); // グラフは全期間のデータを使用
                     showStatus("サマリーを更新しました。", false, 'summary-status');
                 }, (error) => {
@@ -518,6 +533,115 @@
         }
 
         /**
+         * 全プロジェクトの収支サマリーをHTMLにレンダリングする
+         * @param {Array} timestamps - 稼働実績データの配列 (選択された月のみ)
+         */
+        function renderGlobalRevenueSummary(timestamps) {
+            if (!globalRevenueSummaryContainer) return;
+
+            if (timestamps.length === 0) {
+                globalRevenueSummaryContainer.innerHTML = '<p class="text-gray-500 text-center py-4">この月には稼働実績がありません。</p>';
+                globalRevenueSummaryContainer.classList.remove('hidden');
+                return;
+            }
+
+            // Group by projectCode and calculate total hours for each project for the current month
+            const groupedByProject = timestamps.reduce((acc, ts) => {
+                const projectCode = ts.projectCode || '未選択';
+                if (!acc[projectCode]) {
+                    acc[projectCode] = { totalHours: 0, timestamps: [] };
+                }
+                acc[projectCode].totalHours += ts.durationHours || 0;
+                acc[projectCode].timestamps.push(ts);
+                return acc;
+            }, {});
+
+            let grandTotalRevenue = 0;
+            let grandTotalAdjustedHours = 0;
+
+            let summaryHtml = `
+                <h3 class="text-xl font-bold text-gray-800 mb-4">全プロジェクト収支サマリー</h3>
+                <div class="overflow-x-auto">
+                    <table class="min-w-full divide-y divide-gray-200">
+                        <thead class="bg-gray-50">
+                            <tr>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">プロジェクト名</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">契約種類</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">調整後稼働時間</th>
+                                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">収支</th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-white divide-y divide-gray-200">
+            `;
+
+            const sortedProjectCodes = Object.keys(groupedByProject).sort();
+
+            sortedProjectCodes.forEach(projectCode => {
+                const projectData = groupedByProject[projectCode];
+                const projectDetails = userProjects.get(projectCode);
+                const projectName = projectDetails?.name || projectCode;
+
+                let totalRevenue = 0;
+                let adjustedTotalHours = projectData.totalHours;
+
+                if (projectDetails) {
+                    const baseHourlyRate = projectDetails.baseHourlyRate || 0;
+                    const workTimeUnitMinutes = projectDetails.workTimeUnit || 1;
+
+                    const totalActualMinutes = projectData.totalHours * 60;
+                    const adjustedTotalMinutes = Math.floor(totalActualMinutes / workTimeUnitMinutes) * workTimeUnitMinutes;
+                    adjustedTotalHours = adjustedTotalMinutes / 60;
+
+                    if (projectDetails.contractType === 'fixed') {
+                        const baseWorkingHours = projectDetails.baseWorkingHours || 0;
+                        const billingRangeStart = projectDetails.billingRangeStart || 0;
+                        const billingRangeEnd = projectDetails.billingRangeEnd || 0;
+
+                        let baseRevenue = baseHourlyRate * baseWorkingHours;
+                        totalRevenue = baseRevenue;
+
+                        if (adjustedTotalHours > billingRangeEnd) {
+                            totalRevenue += (adjustedTotalHours - billingRangeEnd) * baseHourlyRate;
+                        } else if (adjustedTotalHours < billingRangeStart) {
+                            totalRevenue -= (billingRangeStart - adjustedTotalHours) * baseHourlyRate;
+                        }
+                    } else if (projectDetails.contractType === 'hourly') {
+                        totalRevenue = adjustedTotalHours * baseHourlyRate;
+                    }
+                }
+
+                grandTotalRevenue += totalRevenue;
+                grandTotalAdjustedHours += adjustedTotalHours;
+
+                summaryHtml += `
+                    <tr>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">${projectName}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${projectDetails?.contractType === 'fixed' ? '固定清算' : '時給清算'}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${adjustedTotalHours.toFixed(2)} 時間</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${totalRevenue.toLocaleString('ja-JP', { style: 'currency', currency: 'JPY' })}</td>
+                    </tr>
+                `;
+            });
+
+            summaryHtml += `
+                        </tbody>
+                        <tfoot>
+                            <tr class="bg-gray-100">
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-bold text-gray-900" colspan="2">合計</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-bold text-gray-900">${grandTotalAdjustedHours.toFixed(2)} 時間</td>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-bold text-gray-900">${grandTotalRevenue.toLocaleString('ja-JP', { style: 'currency', currency: 'JPY' })}</td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            `;
+
+            globalRevenueSummaryContainer.innerHTML = summaryHtml;
+            globalRevenueSummaryContainer.classList.remove('hidden'); // Make it visible
+        }
+
+
+        /**
          * 編集ボタンがクリックされたときのハンドラー
          * @param {string} timestampId - 編集対象のタイムスタンプID
          */
@@ -646,7 +770,13 @@
             }
 
             // アクティブなプロジェクトのタイムスタンプのみをフィルタリング
-            const projectTimestamps = loadedTimestamps.filter(ts => (ts.projectCode || '未選択') === activeProjectCode);
+            const projectTimestamps = loadedTimestamps.filter(ts => {
+                const selectedDateForTable = new Date(summaryMonthInput.value + '-01T00:00:00');
+                const tsDate = ts.clockInTime.toDate();
+                return (ts.projectCode || '未選択') === activeProjectCode &&
+                       tsDate.getFullYear() === selectedDateForTable.getFullYear() && 
+                       tsDate.getMonth() === selectedDateForTable.getMonth();
+            });
 
             if (projectTimestamps.length === 0) {
                 showStatus(`選択されたプロジェクト (${activeProjectName}) に稼働実績がありません。`, true, 'summary-status');
@@ -664,72 +794,9 @@
 
             const selectedMonth = summaryMonthInput.value; // YYYY-MM
 
-            // --- Project Revenue Calculation for PDF ---
-            let totalRevenue = 0;
-            let baseRevenue = 0;
-            let overageHours = 0;
-            let shortfallHours = 0;
-            let overageAmount = 0;
-            let shortfallAmount = 0;
-            let adjustedTotalHours = totalProjectHours;
-
-            const projectDetails = userProjects.get(activeProjectCode);
-            if (projectDetails) {
-                const baseHourlyRate = projectDetails.baseHourlyRate || 0;
-                const workTimeUnitMinutes = projectDetails.workTimeUnit || 1;
-
-                const totalActualMinutes = totalProjectHours * 60;
-                const adjustedTotalMinutes = Math.floor(totalActualMinutes / workTimeUnitMinutes) * workTimeUnitMinutes;
-                adjustedTotalHours = adjustedTotalMinutes / 60;
-
-                if (projectDetails.contractType === 'fixed') {
-                    const baseWorkingHours = projectDetails.baseWorkingHours || 0;
-                    const billingRangeStart = projectDetails.billingRangeStart || 0;
-                    const billingRangeEnd = projectDetails.billingRangeEnd || 0;
-
-                    baseRevenue = baseHourlyRate * baseWorkingHours;
-                    totalRevenue = baseRevenue;
-
-                    if (adjustedTotalHours > billingRangeEnd) {
-                        overageHours = adjustedTotalHours - billingRangeEnd;
-                        overageAmount = overageHours * baseHourlyRate;
-                        totalRevenue += overageAmount;
-                    } else if (adjustedTotalHours < billingRangeStart) {
-                        shortfallHours = billingRangeStart - adjustedTotalHours;
-                        shortfallAmount = shortfallHours * baseHourlyRate;
-                        totalRevenue -= shortfallAmount;
-                    }
-                } else if (projectDetails.contractType === 'hourly') {
-                    totalRevenue = adjustedTotalHours * baseHourlyRate;
-                }
-            }
-
             // PDFに含めるコンテンツを構築
             const pdfContent = document.createElement('div');
             pdfContent.className = 'p-6 font-sans text-gray-800'; // Added font-sans for better default font
-
-            let contractDetailsHtml = '';
-            if (projectDetails) {
-                contractDetailsHtml += `
-                    <p><strong>契約種類:</strong> ${projectDetails.contractType === 'fixed' ? '固定清算' : '時給清算'}</p>
-                    <p><strong>基本時給:</strong> ${projectDetails.baseHourlyRate?.toLocaleString('ja-JP', { style: 'currency', currency: 'JPY' }) || 'N/A'}</p>
-                    <p><strong>作業時間単位:</strong> ${projectDetails.workTimeUnit || 'N/A'} 分</p>
-                    <p><strong>総稼働時間 (調整後):</strong> ${adjustedTotalHours.toFixed(2)} 時間</p>
-                `;
-                if (projectDetails.contractType === 'fixed') {
-                    contractDetailsHtml += `
-                        <p><strong>基本稼働時間:</strong> ${projectDetails.baseWorkingHours?.toFixed(2) || 'N/A'} 時間</p>
-                        <p><strong>清算幅:</strong> ${projectDetails.billingRangeStart?.toFixed(2) || 'N/A'} - ${projectDetails.billingRangeEnd?.toFixed(2) || 'N/A'} 時間</p>
-                        <p><strong>基本報酬:</strong> ${baseRevenue.toLocaleString('ja-JP', { style: 'currency', currency: 'JPY' })}</p>
-                        ${overageHours > 0 ? `<p class="text-green-700"><strong>超過時間:</strong> ${overageHours.toFixed(2)} 時間 (${overageAmount.toLocaleString('ja-JP', { style: 'currency', currency: 'JPY' })})</p>` : ''}
-                        ${shortfallHours > 0 ? `<p class="text-red-700"><strong>不足時間:</strong> ${shortfallHours.toFixed(2)} 時間 (${shortfallAmount.toLocaleString('ja-JP', { style: 'currency', currency: 'JPY' })})</p>` : ''}
-                    `;
-                }
-                contractDetailsHtml += `<p class="text-lg font-bold mt-3"><strong>合計収支:</strong> ${totalRevenue.toLocaleString('ja-JP', { style: 'currency', currency: 'JPY' })}</p>`;
-            } else {
-                contractDetailsHtml = '<p>プロジェクトの契約情報がありません。</p>';
-            }
-
 
             pdfContent.innerHTML = `
                 <style>
@@ -769,11 +836,6 @@
                     <h2 class="header-title">${selectedMonth} 稼働時間報告書</h2>
                     <p class="project-info">${activeProjectName} (${activeProjectCode})</p>
                     <p class="total-time">合計稼働時間: ${totalProjectHours.toFixed(2)} 時間</p>
-                </div>
-
-                <div style="margin-top: 20px; padding: 10px; background-color: #e0f2f7; border-radius: 8px;">
-                    <h3 style="font-size: 16px; font-weight: bold; color: #01579B; margin-bottom: 10px;">プロジェクト収支詳細:</h3>
-                    ${contractDetailsHtml}
                 </div>
 
                 <table>
